# openarcade

./: .gitignore  LICENSE  README.md  run-openarcade.sh
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: main.js  parlor.js  styles.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: main.rs
docs/: architecture.md
infra/: README.md
infra/db/: schema.sql
infra/lxc/: containers.env  provision.sh
infra/setup/: arcade-api.sh  arcade-data.sh  arcade-web.sh
infra/tools/gslist/: gslist
services/arcade-api/: Cargo.toml
services/arcade-api/src/: main.rs  poker.rs
web/: .env.example  README.md  package.json
web/app/: layout.tsx  page.tsx
