[package]
name = "arcade-api"
version = "0.1.0"
description = "OpenArcade aggregator, poller, and WebSocket gateway"
authors = ["Austin Funk (32bitcolor)"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-postgres = "0.7"
deadpool-postgres = "0.14"
redis = { version = "0.27", features = ["tokio-comp", "aio"] }
futures = "0.3"
rand = "0.8"
